2002-01-08  Bruno Haible  <bruno@clisp.org>

	* msgattrib-*: Terminate the test immediately if the msg* program
	fails.
	* msgcat-*: Likewise.
	* msgcomm-*: Likewise.
	* msgconv-*: Likewise.
	* msgen-*: Likewise.
	* msgexec-*: Likewise.
	* msgfilter-*: Likewise.
	* msgfmt-*: Likewise.
	* msggrep-*: Likewise.
	* msgmerge-*: Likewise.
	* msgunfmt-*: Likewise.
	* msguniq-*: Likewise.
	* xgettext-*: Likewise.

2002-01-08  Bruno Haible  <bruno@clisp.org>

	* format-elisp-1: New file.
	* format-elisp-2: New file.
	* lang-elisp: New file.
	* Makefile.am (TESTS): Add format-elisp-1, format-elisp-2,
	lang-elisp.

2002-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (TESTS): Add msgconv-3.

2001-07-02  Karl Eichwalder  <ke@suse.de>

	* msgconv-3: New file.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* lang-java: If msgfmt fails (for example, due to missing iconv()
	support), let the test fail immediately.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	Avoid setting LC_ALL for random shell and utility commands, including
	libtool generated shell scripts. It generates extraneous output on
	Solaris and HP-UX.

	* tstgettext.c: Copy code from ../src/gettext.c. Add --env option.
	* gettext-1: Pass extra environment variables only to the tstgettext
	program. Pass LC_ALL via --env option. No need to pass LC_MESSAGES and
	LANG.
	* gettext-2: Likewise.
	* msgfmt-1: Likewise.
	* msgfmt-2: Likewise.

	* tstngettext.c: Add --env option.
	* plural-2: Pass extra environment variables only to the tstngettext
	program. Pass LC_ALL via --env option.

	* plural-1-prg.c: Pass locale as first argument.
	* plural-1: Pass extra environment variables only to the cake program.
	Pass LC_ALL value to cake as an argument.

	* msgcmp-2: Pass extra environment variables only to the msgcmp
	program.

	* msgmerge-2: Pass extra environment variables only to the msgmerge
	program.

	* lang-c: Pass LC_ALL value to prog as an argument.
	* lang-c++: Likewise.
	* lang-objc: Likewise.
