@@ -27,6 +27,7 @@ cat <<\EOF > prog.m
 #include <locale.h>
 #include <stdio.h>
 #include <stdlib.h>
+#include "xsetenv.h"
 #define _(string) gettext (string)
 
 int main (argc, argv)
@@ -35,7 +36,8 @@ int main (argc, argv)
 {
   int n = atoi (argv[2]);
 
-  if (setlocale (LC_ALL, argv[1]) == NULL)
+  xsetenv ("LC_ALL", argv[1], 1);
+  if (setlocale (LC_ALL, "") == NULL)
     {
       fprintf (stderr, "Couldn't set locale.\n");
       exit (77);
@@ -61,7 +63,7 @@ EOF
 top_builddir=..
 
 tmpfiles="$tmpfiles prog.${OBJEXT} prog${EXEEXT}"
-${LIBTOOL} --quiet --mode=link ${CC} ${CFLAGS} ${CPPFLAGS} ${LDFLAGS} -o prog prog.m -I../intl ${INTLLIBS} \
+${LIBTOOL} --quiet --mode=link ${CC} ${CFLAGS} ${CPPFLAGS} ${LDFLAGS} -o prog prog.m -I$top_srcdir/lib ../lib/libgettextlib.la -I../intl ${INTLLIBS} \
   || exit 1
 
 tmpfiles="$tmpfiles prog.pot"
